2008-06-30  Laurent Debacker <debackerl@gmail.com> 

	* ApplicationMenu.cs: hide container when windows is hidden
	* ApplicationButton.cs: keep the app menu pressed while the app menu is
	  opened

2008-06-29  Laurent Debacker <debackerl@gmail.com> 

	* ApplicationMenuItem.cs: Text align fix, and delayed menu opening.
	* ApplicationMenu.cs: One hard-coded value removed

2008-06-28  Laurent Debacker <debackerl@gmail.com> 

	* Theme.cs: More compliant app menu background, and new feature for buttons:
	  opaque background.
	* ApplicationMenu.cs: Opaque buttons, window offset.
	* ApplicationButton.cs: API update
	* BaseButton.cs: New feature: opaque background

2008-06-28  Laurent Debacker <debackerl@gmail.com> 

	* Theme.cs: Nicer menu items background
	* ApplicationMenuItem.cs: Attempt to fix justification of menu item labels,
	  not ok yet
	* ApplicationMenu.cs: Fixed menu size

2008-06-28  Laurent Debacker <debackerl@gmail.com> 

	* ApplicationMenu.cs: Working menu opening

2008-06-28  Laurent Debacker <debackerl@gmail.com> 

	* Theme.cs: First steps for the app menu theme
	* ApplicationMenuItem.cs: Better handling of fast moving pointers
	* ApplicationMenu.cs: Bugfixes

2008-06-28  Laurent Debacker <debackerl@gmail.com> 

	* Theme.cs: Better behavior of hilighs for app menu item
	* ApplicationMenuItem.cs: More work on proper app menu item behavior
	  (hilights)

2008-06-28  Laurent Debacker <debackerl@gmail.com> 

	* Theme.cs: Fix them code for app menu item
	* ApplicationMenuItem.cs: Bug fixes
	* ApplicationMenu.cs: Remove debug code

2008-06-27  Laurent Debacker <debackerl@gmail.com> 

	* ApplicationMenu.cs: Bugfix, can now open app menu multiple times

2008-06-27  Laurent Debacker <debackerl@gmail.com> 

	* QuickAccessToolbar.cs, FlowLayoutContainer.cs: Bugfix in remove
	* Theme.cs, ApplicationMenuItem.cs: API update
	* ApplicationMenu.cs: Lot of work to solve the rendering bug. It is now
	  gone, but I cannot open the menu more than once...
